NXP-29700: cleanup/format